--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:text="登录" />
@@ -35,5 +35,15 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_height="60dp"
         android:text="支付" />
+
+    <Button
+        android:id="@+id/btn_wx_w"
+        android:layout_width="0dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_pay"
+        android:layout_marginTop="50dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_height="60dp"
+        android:text="公众号" />
 
 </android.support.constraint.ConstraintLayout>
